# pyeXDC

./: README.md  setup.cfg
.github/workflows/: release.yml
exdc/: __init__.py  _client.py  _consts.py  _model.py  _type.py  exception.py  type.py
exdc/_client/: _gateway.py  _rest.py
exdc/type/: application.py  application_role_connection_metadata.py  channel.py  emoji.py  gateway.py  guild.py  oauth2.py  permissions.py  rest.py  sticker.py  teams.py  user.py  voice.py  webhook.py
exdc/type/interactions/: __init__.py  application_command.py  message_component.py
