[metadata]
name = exdc
version = 0.0.0
url = https://github.com/eXhumer/pyeXDC
author = eXhumer
author_email = exhumer@exhumer.cc
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Discord client

[options]
python_requires = >= 3.9
zip_safe = False
packages = exdc
install_requires =
    requests
    requests-toolbelt
    websocket-client
